# broker_parser

./: .cursorrules  .gitignore  .~lock.movimientos_Pellegrini.csv#  .~lock.parsed_broker_data.xlsx#  README.md  broker_data_parser.py  movimientos_Pellegrini.csv  movimientos_Pellegrini_parsed.xlsx  parsed_broker_data.xlsx  projectinstructions.txt  pyproject.toml  requirements.txt  run_parser.py  test_broker_data.csv
config/: ruff.toml
examples/: pellegrini_example.py
src/broker_parser/brokers/pellegrini/: parser.py
src/broker_parser/shared/: base_parser.py  types.py
tests/brokers/pellegrini/: test_parser.py
