[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "broker-parser"
version = "0.1.0"
description = "A Python package for parsing and transforming financial broker data"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Manuela Gabriel", email = "m.gabriel@mercapsoftware.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial",
]

[tool.hatch.build.targets.wheel]
packages = ["src/broker_parser"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=broker_parser --cov-report=term-missing"

[tool.coverage.run]
source = ["broker_parser"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true 